--- a/src/Components/Sidebar/Sidebar.module.scss
+++ b/src/Components/Sidebar/Sidebar.module.scss
@@ -1,87 +1,48 @@
 .sidebar {
   font-family: "Montserrat", sans-serif;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 25vw;
-  background-color: #101010;
+  max-width: 100vw;
+  width: 100%;
+  background: opacity($color: #101010);
   color: white;
 
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
+
+.balanceH2 {
+  font-size: 20px;
+}
 .balance {
+  padding-left: 10px;
   color: rgb(9, 212, 9);
 }
 .sidebarContent {
   height: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   padding-bottom: 10px;
 }
 
-.profileDetails {
-  margin-top: 2rem;
-}
-
-.profileImageDiv {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.profileAvatar {
-  width: 150px;
-  border-radius: 100px;
-  margin-bottom: 10px;
-}
-
-.notifications {
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  background-color: #dc3434;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  position: absolute;
-  top: 1px;
-  right: 50px;
-}
-.userNameEmail {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.userName {
-  padding: 0 20px;
-  font-weight: 600;
-  font-size: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.userEmail {
-  padding: 0 20px;
-  opacity: 0.6;
-}
-
 .sidebarNav {
   padding-top: 20px;
+
   > ul {
     display: flex;
-    flex-direction: column;
-    padding: 0px auto;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+
+    @media screen and (max-width: 430px) {
+      gap: 15px;
+    }
+    @media screen and (max-width: 420px) {
+      display: none;
+    }
   }
 }
 
@@ -100,5 +61,22 @@
   &Active {
     @extend .sidebarNavLink;
     opacity: 1;
+  }
+  @media screen and (max-width: 670px) {
+    font-size: 20px;
+  }
+  @media screen and (max-width: 550px) {
+    font-size: 15px;
+  }
+}
+.button {
+  margin-top: 10px;
+  padding: 5px 15px;
+  border-radius: 10px;
+  color: #ffffff;
+  background: #000;
+
+  @media screen and (max-width: 550px) {
+    font-size: 15px;
   }
 }
