--- a/src/Components/Sidebar/Sidebar.module.scss
+++ b/src/Components/Sidebar/Sidebar.module.scss
@@ -9,6 +9,9 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  @media screen and (max-width: 420px) {
+    display: none;
+  }
 }
 
 .balanceH2 {
