--- a/src/Components/Expenses/Expenses.module.scss
+++ b/src/Components/Expenses/Expenses.module.scss
@@ -3,7 +3,8 @@
   margin-bottom: 20px;
   padding: 20px 0;
   border-radius: 20px;
-  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  background: #f9fafc;
+  // box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   @media screen and (max-width: 960px) {
     grid-row: 1;
   }
@@ -20,8 +21,6 @@
   align-items: center;
 }
 .profileAvatar {
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
   max-width: 150px;
   width: 100%;
   border-radius: 100px;
@@ -43,6 +42,8 @@
   right: 120px;
 }
 .userNameEmail {
+  background: #fff;
+
   margin: 10px 20px;
   padding: 20px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -146,7 +147,7 @@
 }
 
 .expensesCard {
-  background-color: #ffffff;
+  background-color: #fff;
   border-radius: 30px;
   display: grid;
   grid-template-columns: repeat(3, auto);
@@ -155,7 +156,7 @@
   // align-items: center;
 
   padding: 15px 40px;
-  margin: 0 auto;
+  margin: 30px auto;
   @media screen and (max-width: 1205px) {
     grid-template-columns: repeat(2, auto);
     grid-template-rows: repeat(2, auto);
@@ -173,6 +174,8 @@
 
 .expensesOverview {
   padding: 1rem;
+  border-radius: 20px;
+
   @media screen and (max-width: 960px) {
     grid-row: 2;
   }
@@ -300,7 +303,8 @@
   max-width: 400px;
   background-color: #f9fafc;
   border-radius: 30px;
-  padding: 20px 10px;
+  padding: 25px 10px;
+  margin: 30px 0;
   overflow-y: scroll;
   @media screen and (max-width: 1205px) {
     grid-column: 2;
